@@ -1,92 +1,124 @@
-Unless otherwise stated, files in YARP are:
-  Copyright: 2006 Paul Fitzpatrick, Giorgio Metta, Lorenzo Natale
-  Released under the GNU GPL, version 2 - see GPL.TXT for details.
 
-Contributed files in YARP are copyright of their authors, and
-released under the same license.  The author list for contributed
-files follows.
+     _________________________________________________________________
+   
+  Copyright and Licensing Information for ACE(TM), TAO(TM), CIAO(TM), and
+  CoSMIC(TM)
+  
+   [1]ACE(TM), [2]TAO(TM), [3]CIAO(TM), and [4]CoSMIC(TM) (henceforth
+   referred to as "DOC software") are copyrighted by [5]Douglas C.
+   Schmidt and his [6]research group at [7]Washington University,
+   [8]University of California, Irvine, and [9]Vanderbilt University,
+   Copyright (c) 1993-2007, all rights reserved. Since DOC software is
+   open-source, freely available software, you are free to use, modify,
+   copy, and distribute--perpetually and irrevocably--the DOC software
+   source code and object code produced from the source, as well as copy
+   and distribute modified versions of this software. You must, however,
+   include this copyright statement along with any code built using DOC
+   software that you release. No copyright statement needs to be provided
+   if you just ship binary executables of your software products.
+   
+   You can use DOC software in commercial and/or binary software releases
+   and are under no obligation to redistribute any of your source code
+   that is built using DOC software. Note, however, that you may not do
+   anything to the DOC software code, such as copyrighting it yourself or
+   claiming authorship of the DOC software code, that will prevent DOC
+   software from being distributed freely using an open-source
+   development model. You needn't inform anyone that you're using DOC
+   software in your software, though we encourage you to let [10]us know
+   so we can promote your project in the [11]DOC software success
+   stories.
+   
+   The [12]ACE, [13]TAO, [14]CIAO, and [15]CoSMIC web sites are
+   maintained by the [16]DOC Group at the [17]Institute for Software
+   Integrated Systems (ISIS) and the [18]Center for Distributed Object
+   Computing of Washington University, St. Louis for the development of
+   open-source software as part of the open-source software community. By
+   submitting comments, suggestions, code, code snippets, techniques
+   (including that of usage) and algorithms (collectively
+   ``Submissions''), submitters acknowledge that they have the right to
+   do so, that any such Submissions are given freely and unreservedly,
+   and that they waive any claims to copyright or ownership. In addition,
+   submitters acknowledge that any such Submission might become part of
+   the copyright maintained on the overall body of code that comprises
+   the DOC software. By making a Submission, submitter agree to these
+   terms. Moreover, submitters acknowledge that the incorporation or
+   modification of such Submissions is entirely at the discretion of the
+   moderators of the open-source DOC software projects or their
+   designees.
+   
+   Submissions are provided by the submitter ``as is'' with no warranties
+   whatsoever, including any warranty of merchantability, noninfringement
+   of third party intellectual property, or fitness for any particular
+   purpose. In no event shall the submitter be liable for any direct,
+   indirect, special, exemplary, punitive, or consequential damages,
+   including without limitation, lost profits, even if advised of the
+   possibility of such damages. Likewise, DOC software is provided as is
+   with no warranties of any kind, including the warranties of design,
+   merchantability, and fitness for a particular purpose,
+   noninfringement, or arising from a course of dealing, usage or trade
+   practice. Washington University, UC Irvine, Vanderbilt University,
+   their employees, and students shall have no liability with respect to
+   the infringement of copyrights, trade secrets or any patents by DOC
+   software or any part thereof. Moreover, in no event will Washington
+   University, UC Irvine, or Vanderbilt University, their employees, or
+   students be liable for any lost revenue or profits or other special,
+   indirect and consequential damages.
+   
+   DOC software is provided with no support and without any obligation on
+   the part of Washington University, UC Irvine, Vanderbilt University,
+   their employees, or students to assist in its use, correction,
+   modification, or enhancement. A [19]number of companies around the
+   world provide commercial support for DOC software, however.
+   
+   DOC software is Y2K-compliant, as long as the underlying OS platform
+   is Y2K-compliant. Likewise, DOC software is compliant with the new US
+   daylight savings rule passed by Congress as "The Energy Policy Act of
+   2005," which established new daylight savings times (DST) rules for
+   the United States that expand DST as of March 2007. Since DOC software
+   obtains time/date and calendaring information from operating systems
+   users will not be affected by the new DST rules as long as they
+   upgrade their operating systems accordingly.
+   
+   The names ACE(TM), TAO(TM), CIAO(TM), CoSMIC(TM), Washington
+   University, UC Irvine, and Vanderbilt University, may not be used to
+   endorse or promote products or services derived from this source
+   without express written permission from Washington University, UC
+   Irvine, or Vanderbilt University. Further, products or services
+   derived from this source may not be called ACE(TM), TAO(TM), CIAO(TM),
+   or CoSMIC(TM) nor may the name Washington University, UC Irvine, or
+   Vanderbilt University appear in their names, without express written
+   permission from Washington University, UC Irvine, and Vanderbilt
+   University.
+   
+   If you have any suggestions, additions, comments, or questions, please
+   let [20]me know.
+   
+   [21]Douglas C. Schmidt
+     _________________________________________________________________
+   
+   Back to the [22]ACE home page.
 
-Copyright 2003 2005 2006 2007:
-  Alessandro Scalzo
-  Alexandre Bernardino
-  Alex Bernardino
-  Assif Mirza
-  Carlos Beltran-Gonzalez
-  Claudio Castellini
-  Eric Mislivec
-  Freyr Magnusson
-  Giacomo Spigler
-  Giorgio Metta
-  Jonas Ruesch
-  Julio Gomes
-  Lars Olsson
-  Lorenzo Natale
-  Matteo Brunettini
-  Mattia Castelnovi
-  Mike P. Blow
-  Paul Fitzpatrick
+References
 
-Certain files are integrated in YARP from other sources with
-compatible licenses.  Here is a list of these files and a summary of
-their copyright.  See the individual files for more details.
-
-./example/yayarpview/CImg.h
-  Copyright: 2004 David Tschumperle
-  CopyPolicy: CeCILL license (use, modify, redistribute)
-
-./src/libYARP_dev/src/jrkerr/winnt/dd_orig/include/nmccom.h
-  Copyright: (c) 2007 Jeffrey Kerr LLC
-  CopyPolicy: 3-clause BSD
-
-./src/libYARP_dev/src/jrkerr/winnt/dd_orig/include/picservo.h
-  Copyright: (c) 2007 Jeffrey Kerr LLC
-  CopyPolicy: 3-clause BSD
-
-./src/libYARP_dev/src/jrkerr/winnt/dd_orig/include/sio_util.h
-  Copyright: (c) 2007 Jeffrey Kerr LLC
-  CopyPolicy: 3-clause BSD
-
-./src/libYARP_dev/src/urbtc/linux/iMCs01/driver/urbtc.h
-  Copyright: (C) 2007 iXs Research Corp
-  CopyPolicy: Released under the terms of the GNU GPL version 2
-
-./src/libYARP_dev/src/urbtc/linux/iMCs01/driver/urobotc.h
-  Copyright: (C) 2007 iXs Research Corp
-  CopyPolicy: Released under the terms of the GNU GPL version 2
-
-./src/libYARP_sig/include/yarp/sig/IplImage.h
-  Copyright: (C) 2000, Intel Corporation, all rights reserved.
-  CopyPolicy: Intel License Agreement For Open Source Computer Vision Library
-
-./example/gtk/gtkdemo.cpp
-  Copyright: 1997 Ian Main, 1998-2002 Tony Gale.
-  CopyPolicy: Tutorial copies permitted, preserve notices.
-
-./src/libYARP_OS/src/Random.cpp
-  Copyright: 1994, Everett F. Carter Jr.
-  CopyPolicy: Preserve copyright notice
-
-./src/libYARP_dev/src/dimax_u2c/winnt/yarp/I2c.cpp
-  Copyright: (C)2004 Dimax ( http://www.xdimax.com )
-  CopyPolicy: unknown
-
-./src/libYARP_dev/src/jrkerr/winnt/dd_orig/src/nmccom.cpp
-  Copyright: (c) 2007 Jeffrey Kerr LLC
-  CopyPolicy: 3-clause BSD
-
-./src/libYARP_dev/src/jrkerr/winnt/dd_orig/src/picservo.cpp
-  Copyright: (c) 2007 Jeffrey Kerr LLC
-  CopyPolicy: 3-clause BSD
-
-./src/libYARP_dev/src/jrkerr/winnt/dd_orig/src/sio_util.cpp
-  Copyright: (c) 2007 Jeffrey Kerr LLC
-  CopyPolicy: 3-clause BSD
-
-./src/libYARP_sig/src/SoundFile.cpp
-  Copyright: 1998,1999 Heiko Eissfeldt
-  CopyPolicy: GNU Public License 2 applies
-
-./src/libYARP_dev/src/urbtc/linux/iMCs01/driver/urbtc.c
-  Copyright: (C) 2001-2004 Greg Kroah-Hartman (greg@kroah.com)
-  CopyPolicy: Released under the terms of the GNU GPL version 2
-
+   1. http://www.cs.wustl.edu/~schmidt/ACE.html
+   2. http://www.cs.wustl.edu/~schmidt/TAO.html
+   3. http://www.dre.vanderbilt.edu/CIAO/
+   4. http://www.dre.vanderbilt.edu/cosmic/
+   5. http://www.dre.vanderbilt.edu/~schmidt/
+   6. http://www.cs.wustl.edu/~schmidt/ACE-members.html
+   7. http://www.wustl.edu/
+   8. http://www.uci.edu/
+   9. http://www.vanderbilt.edu/
+  10. mailto:doc_group@cs.wustl.edu
+  11. http://www.cs.wustl.edu/~schmidt/ACE-users.html
+  12. http://www.cs.wustl.edu/~schmidt/ACE.html
+  13. http://www.cs.wustl.edu/~schmidt/TAO.html
+  14. http://www.dre.vanderbilt.edu/CIAO/
+  15. http://www.dre.vanderbilt.edu/cosmic/
+  16. http://www.dre.vanderbilt.edu/
+  17. http://www.isis.vanderbilt.edu/
+  18. http://www.cs.wustl.edu/~schmidt/doc-center.html
+  19. http://www.cs.wustl.edu/~schmidt/commercial-support.html
+  20. mailto:d.schmidt@vanderbilt.edu
+  21. http://www.dre.vanderbilt.edu/~schmidt/
+  22. http://www.cs.wustl.edu/ACE.html
