@@ -1,3 +1,8 @@
+2007-11-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* conf/FindAce.cmake: make it easier to link ACE statically
+	with YARP, for building binary distributions.
+
 2007-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/modules/wxsdl/WxsdlWriter.h: stub for alternate wxwidgets+sdl 
